自定义序列化、反序列化处理 ￥ #.### 中式金额传参 自定义参数校验注解实现 参数校验返回信息移除敏感信息